--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
 			<groupId>jaxen</groupId>
 			<artifactId>jaxen</artifactId>
 			<version>1.1.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.8.3</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<repositories>
