--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,30 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.jena</groupId>
+                <artifactId>jena-maven-tools</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <includes>
+                        <include>src/main/resources/GoC_example.owl</include>
+                    </includes>
+                    <fileOptions>
+                        <source>
+                            <input>default</input>
+                            <package-name>model.owl.dcatap</package-name>
+                        </source>
+                    </fileOptions>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>schemagen</id>
+                        <goals>
+                            <goal>translate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
