--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,9 @@
                         <goals>
                             <goal>repackage</goal>
                         </goals>
+                        <configuration>
+                            <outputDirectory>${basedir}/bin</outputDirectory>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -170,6 +173,7 @@
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
     </build>
 </project>
