--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
             <artifactId>jquery-ui</artifactId>
             <version>1.12.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap-select</artifactId>
+            <version>1.6.3</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
